# dns-agent

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  config.toml  example.toml  flake.nix  result
.github/workflows/: release.yml
examples/: config.toml
examples/systemd/: dns-agent.service  dns-agent.timer
src/: config.rs  dns_providers.rs  lib.rs  main.rs  update.rs
src/providers/: cloudflare.rs  digitalocean.rs  mod.rs
