[package]
name = "dns-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digitalocean = { version = "0.1.1" }
clap = { version = "3.1.17", features = [ "derive" ] }
serde_derive = { version = "1.0.137" }
serde = { version = "1.0.137", features = ["derive"] }
log = { version = "0.4" }
simple_logger = { version = "2.1.0", default-features = false, features = ["colors"] }
toml = { version = "0.5.9" }
get_if_addrs = { version = "0.5.3" }
reqwest = { version = "0.11.10", features = ["blocking"]}